erro de portugues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="sidebar" id="sidebar">
-    <h2>Rolações Salvas</h2>
+    <h2>Rolagens Salvas</h2>
     <ul id="savedRolls"></ul>
     <button onclick="addSavedRoll()">Salvar rolagem</button>
   </div>
