--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Marcos Vinicius Wagner">
+  <meta name="description" content="Simulador de rolagens para dado d10">
   <title>Dice Roller L5R</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/x-icon" href="/imgs/d10.png" />
