começando sem sidebar

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </select>
 </div>
 
-  <div class="sidebar" id="sidebar">
+  <div class="sidebar hidden" id="sidebar">
     <h2 id="saved-rolls-title">Rolagens Salvas</h2>
     <ul id="savedRolls"></ul>
     <button id="save-roll-btn" onclick="addSavedRoll()">Salvar rolagem</button>
   </div>
 
-  <button class="floating-btn" id="toggleSidebarBtn">Esconder</button>
+  <button class="floating-btn" id="toggleSidebarBtn">Mostrar</button>
 
   <div class="container">
 
